--- a/typeidea/typeidea/templates/blog/list.html
+++ b/typeidea/typeidea/templates/blog/list.html
@@ -5,12 +5,20 @@
     <title>Title</title>
 </head>
 <body>
+    {% if tag %}
+        标签页：{{ tag.name }}
+    {% endif %}
+
+    {% if category %}}
+        分类页：{{ category.name }}
+    {% endif %}
+
     <ul>
         {% for post in post_list %}
             <li>
             <a href="/post/{{ post.id }}.html">{{ post.title }}</a>
             <div>
-                <span>作者：{{ post.owener.username }}</span>
+                <span>作者：{{ post.owner.username }}</span>
                 <span>分类：{{ post.category.name }}</span>
             </div>
             <p>{{ post.desc }}</p>
